[package]
name = "stasis-bot"
version = "0.3.0-beta.5"
edition = "2021"
authors = ["EnderKill98"]

[dependencies]
anyhow = "1"
azalea = { git = "https://github.com/azalea-rs/azalea.git", default-features = false }
azalea-viaversion = { git = "https://github.com/azalea-rs/azalea-viaversion" }
clap = { version = "4", features = ["derive"] }
once_cell = "1"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
multiple_crate_versions = "allow"
